[package]
name = "bgdb"
version = "0.1.0"
authors = ["Brian Gavin <bgavin1996@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "10"
nix = "0.25"
libc = "0.2"
gimli = "0.26"
object = "0.29"
memmap2 = "0.5"

[dependencies.iced-x86]
version = "1"
default-features = false
# See below for all features
features = ["std", "decoder", "intel"]